# actix_tut

./: Cargo.toml  test-api.org
migrations/: 20250827131859_create_user_table.sql  20250827132613_create_categories_table.sql  20250827133137_create_transactions_table.sql
src/: main.rs
src/controllers/: auth.rs  me.rs
src/db/: user.rs
