[package]
name = "moneyflow"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.143"
sqlx = { version = "0.8", features = [
      "runtime-tokio",
      "tls-rustls",
      "sqlite",
      "mysql",
      "chrono"
 ] }
tokio = { version = "1.47.1", features = ["full"] }
